# R2D2-2017

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  bmptk++.py  flags.cmake
libraries/: .keep
libraries/keypad/: main.cc  matrixKeypad.cc  matrixKeypad.hh
modules/CARRIER/: CMakeLists.txt
modules/CARRIER-CPP/: CMakeLists.txt  carrier-cpp  motor.cc  motor.hh  motorController.cc  motorController.hh
modules/CARRIER-CPP/src/: main.cc  motor.cc  motor.hh  motorController.cc  motorController.hh
modules/CARRIER-PI/: CMakeLists.txt
modules/CARRIER-PI/src/: main.cc  serial-com.cc  serial-com.hh
modules/CARRIER-oud/src/: motor.py
modules/CARRIER/src/: avoidance.cc  avoidance.hh  button.py  carrier-controller.cc  carrier-controller.hh  carrierController.cc  carrierController.cpp  carrierController.hh  hallsensor.cc  hallsensor.hh  hallsensor.py  hc-sr04.cc  hc-sr04.hh  main.cc  main.py  motor-controller.cc  motor-controller.hh  motor.cc  motor.hh  motor.py  serial-com.cc  serial-com.hh  slit-sensor.cc  slit-sensor.hh  sonar.py
modules/CARRIER/src/states/: auto-state.cc  auto-state.hh  avoidance-state.cc  avoidance-state.hh  backward-state.cc  backward-state.hh  clockwise-state.cc  clockwise-state.hh  counter-clockwise-state.cc  counter-clockwise-state.hh  forward-state.cc  forward-state.hh  i-carrier-state.hh  idle-state.cc  idle-state.hh
modules/DUE_COUT/: CMakeLists.txt
modules/DUE_COUT/src/: fast-cout.cc  fast-cout.hh  main.cc  wrap-hwlib.cc  wrap-hwlib.hh
modules/GAS/: CMakeLists.txt
modules/GAS/Doxygen/: Doxyfile
modules/GAS/Doxygen/html/: alarm_8cc.html  alarm_8hh.html  alarm_8hh_source.html  class_alarm.html  class_data_logger-members.html  class_data_logger.html  class_sd_spi-members.html  class_sd_spi.html  classdue_1_1spi__bus__due-members.html  classdue_1_1spi__bus__due.html  data-logger_8cc.html  data-logger_8hh.html  data-logger_8hh_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hwlib-due-spi_8hh.html  hwlib-due-spi_8hh_source.html  (+8 more)
modules/GAS/docs/: ClassDiagram.xml  README-How to edit  Schematic.xml  classdiagram.xml  schematic.xml
modules/GAS/src/: Alarm.cc  Alarm.hh  MAX7219.hh  alarm.cc  alarm.hh  clean.hh  command.cc  command.hh  data-logger.cc  data-logger.hh  dummy.hh  enum.hh  hwlib-due-spi.hh  libc-stub.cc  main.cc  matrix.cc  matrix.hh  matrixparser.cc  matrixparser.hh  mbin_to_mhex.hh  mq5.cc  mq5.hh  parser.cc  parser.hh  rotate.hh  sd-spi.cc  sd-spi.hh  setup.cc  setup.hh  speaker.cc  speaker.hh
modules/MUTEST/: CMakeLists.txt
modules/MUTEST/src/: alarm.cc  hwlib-due-spi.hh  libc-stub.cc  main.cc  mq5.hh  sd-spi.cc
modules/NAVIGATIONSYSTEM/: CMakeLists.txt
modules/NAVIGATIONSYSTEM/src/: graph.cc  graph.hh  node.hh  vertice.cc  vertice.hh
modules/NAVSYS/: CMakeLists.txt
modules/NAVSYS/client/: Button.cc  Button.hh  button.cc  button.hh  client.cc  client.hh  gestures.cc  gestures.hh  graph-drawer.cc  graph-drawer.hh  graph-node.cc  graph-node.hh  graph-vertice.cc  graph-vertice.hh  graphicsgraph.cc  graphicsgraph.hh  graphicsnodes.cc  graphicsnodes.hh  graphicsvertices.cc  graphicsvertices.hh  main.cc  message-box.cc  message-box.hh  server.cc  server.hh  window.cc  window.hh
modules/NAVSYS/common/: Mouse.cc  Mouse.hh  coordinate.cc  coordinate.hh  graph-factory.cc  graph-factory.hh  graph-input.cc  graph-input.hh  graph.cc  graph.hh  mouse.cc  mouse.hh  node.cc  node.hh  pathnode.cc  pathnode.hh  protocol.cc  protocol.hh  vertice.cc  vertice.hh
modules/NAVSYS/docs/: Software-design-for-storage-manager-class.odt
modules/NAVSYS/server/: OutputOfAStar.txt  astar.cc  astar.hh  graph-factory.hh  graph-input.cc  main.cc  node.txt  server.cc  server.hh  vertice.txt
modules/NAVSYS/src/: Astar.cc  Astar.hh  StorageManager.cc  StorageManager.hh  astar.cc  astar.hh  coordinate.cc  coordinate.hh  graph-factory.cc  graph-factory.hh  graph-input.cc  graph-input.hh  graph.cc  graph.hh  graphfactory.cc  graphfactory.hh  graphicsgraph.cc  graphicsgraph.hh  graphicsnodes.cc  graphicsnodes.hh  graphicsvertices.cc  graphicsvertices.hh  graphinput.cc  graphinput.hh  graphnodes.cpp  graphnodes.hpp  main.cc  navsys  node.cc  node.hh  node.txt  pathnode.cc  pathnode.hh  server.cc  server.hh  super.hpp  vertice.cc  vertice.hh  vertice.txt  vertices.cpp
modules/RFID/: CMakeLists.txt
modules/RFID-ENCRYPT/: CMakeLists.txt
modules/RFID-ENCRYPT/src/: Encryptie.cc  Encryptie.hh  Encryption.cc  main.cc
modules/RFID/Set up database/: R2D2.sql  mysql-install.sh
modules/RFID/cmake_modules/: Findmysqlcppconn.cmake  Findmysqlcppconn.cmake.old
modules/RFID/src/: LedController.cc  LedController.hh  MFRC522.cc  MFRC522.hh  MFRC522Debug.cc  MFRC522Debug.hh  MFRC522Extended.cc  MFRC522Extended.hh  MFRC522Hack.cc  MFRC522Hack.hh  bcm2835.hh  config-file-parser.cc  config-file-parser.hh  database-manager.cc  database-manager.hh  database.conf  databasemanager.cc  databasemanager.hh  encryption.cc  encryption.hh  file-factory.cc  file-factory.hh  led-controller.cc  led-controller.hh  main.cc  matrix-keypad.cc  matrix-keypad.hh  mfrc522.cc  mfrc522.hh  mysql.cc  mysql.hh
modules/RFID/src/rfid/: MFRC522.cpp  MFRC522.h  MFRC522Debug.cpp  MFRC522Debug.h  MFRC522Extended.h  MFRC522Hack.h
modules/RFID/src/rfid/fakeSpi/: SPI.cc  SPI.hh
modules/ROBOARM/: CMakeLists.txt  RobotSpaceCoordinatesTest.cpp  coordinates-prototype.pl
modules/ROBOARM/src/: .clang_complete  I2C.cc  I2C.hh  KY101.cc  KY101.hh  Kenimetics.cc  Kenimetics.hh  RobotArmTester.cc  RobotArmTester.hh  i2c.cc  i2c.hh  inverse-forward-kenimetics-test.cc  ky101.cc  ky101.hh  main.cc  parser.cc  parser.hh  robot-arm-tester.cc  robot-arm-tester.hh  robot-arm.cc  robot-arm.hh  robotarmtester.cc  robotarmtester.hh  stepper.cc  stepper.hh  wifi.cc  wifi.hh  wrap-hwlib.hh
modules/template-arduino/: CMakeLists.txt
modules/template-arduino/src/: libc-stub.cc  main.cc  wrap-hwlib.cc
modules/template-pc/: CMakeLists.txt
modules/template-pc/src/: main.cc
modules/template-pi/: CMakeLists.txt
(+81 files in other folders)
